# zkml-system

./: .gitignore  .pre-commit-config.yaml  FINAL_PRODUCT_DESCRIPTION.md  FINAL_PRODUCT_REPORT.md  FINAL_REPORT.md  LICENSE  README.md  RELEASE_NOTES_v3.0.md  ROADMAP.md  SECURITY.md  __init__.py  demo.py  hybrid_bridge.py  requirements.txt  setup.py  zkml_bridge.py
activations/: __init__.py  base.py  optimized.py
audit/: FINAL_AUDIT_REPORT.md  fuzzing.py  profiling.py
benchmarks/: activation_benchmark.py  combined_benchmark.py  e2e_activation_benchmark.py
compressed_sensing/: BENCHMARK_REPORT.md  FINAL_REPORT.md  sparse_witness.py  zkml_integration.py
contracts/: IZkMLVerifier.sol  ModelRegistry.sol  PlonkVerifierOptimized.sol  ZkMLVerifier.sol
core/: __init__.py  field.py  r1cs.py  witness.py
demo/: e2e_demo.py
deployment/: deploy.sh
docs/: BENCHMARKS.md  BN254_ARCHITECTURE.md  CONV2D_ARCHITECTURE.md  PRESENTATION.md  PRODUCTION_ROADMAP.md  SMART_CONTRACT_ARCHITECTURE.md  SNARK_ARCHITECTURE.md  TECHNICAL.md
experimental/: ARCHITECTURE.md  README.md
network/: __init__.py  builder.py  layers.py
plonk/: INTEGRATION_REPORT.md  __init__.py  _poseidon_constants_cache.json  baseline_boundary.py  batch.py  benchmark_results.json  benchmark_rust_vs_python.py  benchmark_tda.py  circuit_compiler.py  core.py  fingerprint_circuit.py  folding.py  hwwb_integration.py  kzg.py  kzg_verifier.py  lookup.py  optimizations.py  plonk_kzg.py  plonk_prover.py  (+19 more)
rust_backend/: Cargo.toml  pyproject.toml
rust_backend/src/: curve.rs  field.rs  kzg.rs  lib.rs  polynomial.rs
(+125 files in other folders)
