[package]
name = "zkml_rust"
version = "0.1.0"
edition = "2021"
description = "Rust performance backend for ZK-TDA system"

[lib]
name = "zkml_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
